2011-05-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/python.c:
   When checking for literal strings to ignore, consider also
   unicode, binary and raw strings.
 * src/plugins.c:
   Define and use get_plugin_path() always and move platform dependent
   code into the function definition.


2011-05-27  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/prefs.c:
   Fix preferences help button when activated with the keyboard.


2011-05-22  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/about.c, src/build.c, tagmanager/tm_workspace.c:
   Remove unused variables (patch by Eugene Arshinov, thanks).
 * src/stash.c:
   Remove unused variables (suggested by Eugene Arshinov).
 * src/ui_utils.c, doc/geany.txt, doc/geany.html:
   Do not allow 'Save All' even if 'allow_always_save' is set
   (patch by Dimitar Zhekov, thanks).
 * data/filetypes.java:
   Add 'enum' to secondary keywords
   (closes #3305737, patch by Matthew Brush, thanks).


2011-05-12  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/encodings.c:
   Update the HTML content-type encoding detection regexp to accept some
   more valid inputs (closes #3300703).


2011-05-11  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/plugins.c:
   Improve the plugin manager dialog a little.
 * src/geanywraplabel.c, src/geanywraplabel.h, src/keybindings.c,
   src/plugins.c:
   Cleanup GeanyWrapLabel a bit.


2011-05-09  Colomban Wendling  <colomban(at)geany(dot)org>

 * plugins/splitwindow.c:
   Remove widget reparenting in Split Window plugin. This fixes plugin
   issues on Windows (patch by Matthew Brush, thanks - closes #2725342).
 * plugins/Makefile.am, plugins/makefile.win32, wscript:
   Enable SplitWindow build on Windows again (re-apply Enrico's patch).


2011-05-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * HACKING:
   Add note about patching Glade 2.12 to compile it with
   newer GTK versions.

